# dot_vox

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
examples/: traverse_graph.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: fuzz_load_bytes.rs
resources/: placeholder.vox
src/: dot_vox_data.rs  lib.rs  model.rs  palette.rs  pallete.rs  parser.rs  scene.rs  types.rs
src/material/: material.rs  material_properties.rs  material_type.rs  mod.rs
src/model/: mod.rs  model.rs  size.rs  voxel.rs
src/resources/: axes.vox  default_palette.bytes  default_pallete.bytes  default_render_cameras.json  default_render_objects.json  metal-material.vox  modified_palette.bytes  modified_pallete.bytes  multi-materials.bytes  not_a.vox  placeholder-with-materials.vox  placeholder-with-pallete.vox  placeholder-with-render-objects.vox  placeholder.vox  single-voxel-with-material.vox  valid_diffuse_material_type.bytes  valid_material.bytes  valid_material_properties.bytes  valid_palette.bytes  valid_size.bytes  valid_voxels.bytes
