[package]
name = "dot_vox"
edition = "2021"
version = "4.1.0"
authors = ["David Edmonds <edmonds.d.r@gmail.com>"]
description = "A Rust library for loading MagicaVoxel .vox files."
license = "MIT"
keywords = ['voxel', 'MagicaVoxel', 'game', 'game-dev']
documentation = "https://docs.rs/dot_vox"
homepage = "https://docs.rs/dot_vox"
repository = "https://github.com/davidedmonds/dot_vox"
readme = "README.md"

[dependencies]
byteorder = "^1.4.3"
lazy_static = "^1.4"
log = "^0.4"
nom = { version = "^7", default-features = false, features = ["alloc"] }

[dev-dependencies]
avow = "0.2.0"
env_logger = "^0.9"
