[package]
name = "dot_vox"
edition = "2021"
version = "5.1.1"
authors = ["David Edmonds <edmonds.d.r@gmail.com>"]
description = "A Rust library for loading MagicaVoxel .vox files."
license = "MIT"
keywords = ['voxel', 'MagicaVoxel', 'game', 'game-dev']
documentation = "https://docs.rs/dot_vox"
homepage = "https://docs.rs/dot_vox"
repository = "https://github.com/dust-engine/dot_vox"
readme = "README.md"

[features]
default = ["ahash"]

[dependencies]
lazy_static = "^1.4"
log = "^0.4"
nom = { version = "^7", default-features = false, features = ["alloc"] }
ahash = { version = "^0.8", optional = true }

[dev-dependencies]
avow = "0.2.0"
glam = "0.21"
nalgebra = "^0.33" # for the traverse_graph example

[[example]]
name = "traverse_graph"
path = "examples/traverse_graph.rs"
